k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecp
  labels:
    app.kubernetes.io/name: everything-control-plane
