k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecp
  namespace: ecp
  labels:
    app: ecp
spec:
  selector:
    app: ecp
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
